# gencrypt

./: Cargo.toml  README.md
src/: crypto.rs  main.rs
