[package]
edition = "2024"
name = "gencrypt"
version = "0.9.1"
description = "Personal usage hashing utility."
readme = false
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = 0
panic = "abort"
incremental = false
strip = true

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread", "macros"] }
aes-gcm = { version = "0.10.3", features = ["aes"] }
arboard = "3.6.1"
base64 = "0.22.1"
iced = { version = "0.14.0", features = ["tokio"] }
rand = "0.9.2"
zstd = "0.13.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rfd = "0.16.0"
sha2 = "0.10.9"
mimalloc = { version = "0.1.48", features = ["v3", "secure"] }
